--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -3,3 +3,91 @@ title: Abraham H. Albertson
 layout: about
 permalink: /albertson.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <br>
+    <br>
+    <h4><p><b>Abraham H. Albertson</b></p></h4>
+    <br>
+    <p>1872-1964</p>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA">Crystal Palace Public Market</a></p>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="max-width:100%;height:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <br>
+    <br>
+    <p>Abraham Horace Albertson was born in Hope, New Jersey and graduated from Columbia University in 1895. Albertson moved to Seattle in 1907 in order to contribute plans for the University of Washington under the Metropolitan Building Company. By the time the plans for Crystal Palace were created in 1926, collaborators Joseph Wade Wilson and Paul David Richardson had been promoted to associates.</p>
+    <br>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="max-width:100%;height:100%;"></a>
+  </div>
+</div>
+  
+  <div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <br>
+    <br>
+    <p>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Abraham H. Albertson.”, “PCAD - Abraham Horace Albertson.” </p>
+    <br>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;height:100%;"></a>
+  </div>
+</div>
+  
+</body>
+</html>
