--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -65,16 +65,22 @@ permalink: /albertson.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="float:right;width:180px;height:175px;">"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="float:right;max-width:100%;">"></a>
   </div>
 </div>
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="float:left;width:1421px;height:1800px;"></a>
-    </div>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="float:left;max-width:75;"></a>
+    <br>
+    <sub>TPL Historic Building Files (BU-12230), Courtesy Northwest Room</sub>
+    <br>
+  </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;width:2737px;height:1806px;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;wmax-width:75%"></a>
+    <br>
+    <sub>TPL Historic Building Files (BU-10009), Courtesy Northwest Room</sub>
+    <br>
   </div>
 </div>
   
