--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -75,7 +75,7 @@ permalink: /albertson.html
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;wmax-width:25%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;max-width:50%;"></a>
     <br>
     <sub>TPL Historic Building Files (BU-10009), Courtesy Northwest Room</sub>
     <br>
