--- a/pages/babcock.html
+++ b/pages/babcock.html
@@ -51,7 +51,7 @@ permalink: /babcock.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Everett Phipps Babcock</b></p></h4>
     <br>
-    <p>1874-1928</p>
+    <em>1874-1928</em>
     <br>
     <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
     <br>
@@ -59,12 +59,12 @@ permalink: /babcock.html
     <br>
     <p>Other Work: <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>, <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a>, <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
     <br>
-    <p>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</p>
+    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
     <br>
+    <sub>TPL Historic Building Files (BU-11000), 11-04-1928, Courtesy Northwest Room</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="float:right;max-width:100%;"></a>
-   <sub>TPL Historic Building Files (BU-11000), 11-04-1928, Courtesy Northwest Room</sub>
   </div>
 </div>
   
