--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -3,3 +3,76 @@ title: Lambert Bassindale
 layout: about
 permalink: /bassindale.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Lambert Bassindale</b></p></h4>
+    <br>
+    <em>1875-1945</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA">N.P.B.A. Hospital</a></p>
+    <br>
+    <p>Lambert Bassindale was born in Racine, Wisconsin in 1875 and graduated from the Chicago Art Institute. After moving to St. Paul in 1918 to partner with associate architect Charles Frost, Bassindale began a long career of designing structures for the Northern Pacific Railroad, including office buildings, Hospitals and Nursing Homes. The  Northern Pacific Beneficial Association Hospital was organized in 1882 and had seven hospitals spanning Minnesota to Tacoma, the westernmost facility.</p>
+    <br>
+    <p>Other Work: <a href="https://prabook.com/web/show-photo.jpg?id=1499465&cache=false">Lowry Hotel, St. Paul, ca. 1920</a>, <a href="https://www.startribune.com/why-did-minneapolis-tear-down-its-train-station-great-northern-depot/600013884/">Great Northern Depot, Minneapolis MN, 1914 (under Charles Frost)</a> </p>
+    <br>
+    <sub>Sources: Bassindale, Lambert. “Lambert Bassindale Papers, 1925.", "1925., Northern Pacific Beneficial Association Hospital Records. , 1905. Print.”</sub>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="float:right;min-width: 1000px;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ext_npba" alt="Crystal Palace Public Market" style="float:right;max-width: 1400px;"></a>
+  </div>
+</div>
+  
+</body>
+</html>
