--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -66,16 +66,16 @@ permalink: /albertson.html
     <sub>TPL Historic Building Files (BU-12230), Courtesy Northwest Room</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="float:right;min-width: 1000px;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="float:right;min-width:100%"></a>
   </div>
 </div>
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="float:left;max-width: 1400px;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="float:left;max-width:100%;"></a>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;max-width: 1400px;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;max-width:50%;"></a>
   </div>
 </div>
   
