--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -62,7 +62,7 @@ permalink: /bassindale.html
     <sub>Sources: Bassindale, Lambert. “Lambert Bassindale Papers, 1925.", "1925., Northern Pacific Beneficial Association Hospital Records. , 1905. Print.”</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="float:right;min-width: 1000px;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="float:right;max-width:100%;"></a>
   </div>
 </div>
       
@@ -70,7 +70,7 @@ permalink: /bassindale.html
   <div class="column left" style="background-color:#FFFFFF;">
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ext_npba" alt="Crystal Palace Public Market" style="float:right;max-width: 1400px;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_npba" alt="N.P.B.A. Hospital" style="float:right;max-width:100%;"></a>
   </div>
 </div>
   
