--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -60,7 +60,10 @@ permalink: /bassindale.html
     <p>Other Work: <a href="https://prabook.com/web/show-photo.jpg?id=1499465&cache=false">Lowry Hotel, St. Paul, ca. 1920</a>, <a href="https://www.startribune.com/why-did-minneapolis-tear-down-its-train-station-great-northern-depot/600013884/">Great Northern Depot, Minneapolis MN, 1914 (under Charles Frost)</a> </p>
     <br>
     <sub>Sources: Bassindale, Lambert. “Lambert Bassindale Papers, 1925.", "1925., Northern Pacific Beneficial Association Hospital Records. , 1905. Print.”</sub>
-    </div>
+    <br>
+    <br>
+    <sub>TPL Historic Building Files (BU-10396), Courtesy Northwest Room</sub>
+  </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="float:right;max-width:100%;"></a>
   </div>
