--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -3,3 +3,74 @@ title: Maurice C. Couchot
 layout: about
 permalink: /couchot.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Maurice C. Couchot</b></p></h4>
+    <br>
+    <em>1869-1933</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA">Sperry Flour Company Elevator</a></p>
+    <br>
+    <p>Maurice C. Couchot was an architect and engineer from San Francisco that was inspired to become a pioneer of reinforced concrete building methods after experiencing the devastation of the 1906 earthquake. Couchot was the company engineer for Sperry Flour and contributed industrial plans for structures in California and Washington.</p>
+    <br>
+    <p>Other Work: <a href="https://calisphere.org/item/48d352f713eef7397040a2d51280c2cc/">Broadway Arcade Building, Downtown, Los Angeles, CA (1922-1924)</a>, <a href="https://sksre.com/project/888-brannan/">888 Brannan Street Factory, San Francisco, CA</a>, <a href="https://ohp.parks.ca.gov/pages/1067/files/CA_Alameda_Oakland Auditorium_DRAFT.pdf">Oakland Auditorium, Oakland, CA, 1913-1915</a> </p>
+    <br>
+    <sub>Sources: “Letters - Times-Herald (Vallejo, CA) - May 25, 2017 - Page 9,”, “Maurice Couchot | Hensolt SEAONC Legacy Project.”, “PCAD - Maurice C. Couchot.”</sub>
+    <br>
+    <br>
+    <sub>TPL Historic Building Files (BU-13919), Circa 1920, Courtesy Northwest Room</sub>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA""><img src="https://aweymo.github.io/losttacoma/objects/ ext_sperry" alt="Sperry Flour Company Elevator" style="float:right;max-width:100%"></a>
+    <br>
+    <br>
+  </div>
+</div>
+  
+</body>
+</html>
