--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -66,7 +66,7 @@ permalink: /couchot.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA""><img src="https://aweymo.github.io/losttacoma/objects/ ext_sperry" alt="Sperry Flour Company Elevator" style="float:right;max-width:100%"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA""><img src="https://aweymo.github.io/losttacoma/objects/ ext_sperry" alt="Sperry Flour Company Elevator" style="float:right;max-width:100%;"></a>
     <br>
     <br>
   </div>
