--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -3,3 +3,95 @@ title: Earl N. Dugan
 layout: about
 permalink: /dugan.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Earl N. Dugan</b></p></h4>
+    <br>
+    <em>1877-1956</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a> <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a> <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt117">Visitation Academy</a> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">Washington Hardware Company Remodel</a> </p>
+    <br>
+    <p>Earl N. Dugan was born in Perry, Iowa and graduated from the University of Illinois in 1906. After working for a short while in Chicago and San Francisco, he arrived in Tacoma working independently as a draftsman. This led to partnerships with Sutton, Whitney and Dugan as well as Mock, Morrison and Dugan. Dugan was the founding member of the Tacoma Society of Architects and would sometimes use this platform to secure contracts through free consultation, as was the case for the Point Defiance Pavilion.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/5295/rec/1">Fidelity Trust Company, Office Building, Downtown, Tacoma, WA (1890) demolished</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/1567/rec/3"> Wright, Annie, Seminary #2, Tacoma, WA (1923-1924)</a> </p>
+    <br>
+    <sub>Sources: “PCAD - Earl Nathaniel Dugan.”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - March 30, 1912 - Page 5,”, The Modern Cemetery, 1920., “Tribune (Published as THE NEWS TRIBUNE) - February 12, 1921 - Page 8,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”. “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 28, 1932 - Page 9,”</sub>
+    <br>
+    <br>
+    <sub>Donnelly Site Hotel, TPL Historic Building Files (BU-11892), Courtesy Northwest Room</sub>
+    <br>
+    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), ca. 1934, Courtesy Northwest Room</sub>
+    <br>
+    <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, Courtesy Northwest Room</sub>
+    <br>
+    <sub>Washington Hardware Company Remodel, TPL Historic Building Files (BU-10989), Courtesy Northwest Room</sub>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=dugan"><img src="https://aweymo.github.io/losttacoma/objects/p_dugan.jpeg" alt="Earl N. Dugan" style="float:right;max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="float:left;max-width:100%;"></a>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="float:right;max-width:100%;"></a>
+  </div>
+</div>
+  
+  <div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="float:left;max-width:100%;"></a>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118"><img src="https://aweymo.github.io/losttacoma/objects/ ext_washington" alt="Washington Hardware Company Remodel" style="float:right;max-width:100%;"></a>
+  </div>
+</div>
+  
+</body>
+</html>
