--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -53,6 +53,7 @@ permalink: /cornils.html
     <br>
     <em>1872-1964</em>
     <br>
+    <br>
     <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a><a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carsten Packing Company Coolers and Shipping Office</a> </p>
     <br>
     <p>According to passages in Electrical West and American Machinist magazines, published in 1922, P.V. Cornils acted as the Carsten Packing Company in-house architect, designing various additions around the original structure. </p>
@@ -65,7 +66,7 @@ permalink: /cornils.html
     <sub>TPL Cultural Resource Survey (BU-10009), 1977, Courtesy Northwest Room</sub>
     <br>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=cornils"><img src="https://aweymo.github.io/losttacoma/objects/ext_carstens" alt="Carstens Packing Company" style="float:right;max-width:100%"></a>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=cornils"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="float:right;max-width:100%"></a>
   </div>
 </div>
   
