--- a/pages/hec.html
+++ b/pages/hec.html
@@ -3,3 +3,69 @@ title: Henschien Everds & Crombie
 layout: about
 permalink: /hec.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Henschien Everds & Crombie</b></p></h4>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien Everds & Crombie">Carsten Packing Company Abattoir</a> </p>
+    <br>
+    <p>Henschien Everds & Crombie were a Chicago firm that specialized in designing meat packing companies that complied with USDA standards. The company worked primarily with east coast companies, including Oscar Meyer. </p>
+    <br>
+    <p>Other Work: <a href="https://www.loc.gov/resource/hhh.ia0405.photos?st=gallery">Ruth Packing Company</a> </p>
+    <br>
+    <sub>"Library of Congress, Washington, D.C. 20540 USA." “Rath Packing Company, Sycamore Street between Elm & Eighteenth Streets, Waterloo, Black Hawk County, IA.”, “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - September 30, 1943 - Page 33,”, “The Argus - October 13, 1978”, “The Times Argus- November 2, 1980 ”</sub>
+    <br>
+    <br>
+    <sub>TPL Cultural Resource Survey (BU-10009), 1977, Courtesy Northwest Room</sub>
+    <br>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=cornils"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="float:right;max-width:100%"></a>
+  </div>
+</div>
+  
+</body>
+</html>
