--- a/pages/hec.html
+++ b/pages/hec.html
@@ -62,7 +62,8 @@ permalink: /hec.html
     <br>
     <sub>TPL Cultural Resource Survey (BU-10009), 1977, Courtesy Northwest Room</sub>
     <br>
-  <div class="column right" style="background-color:#FFFFFF;">
+</div>
+<div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/search/index.html?q=cornils"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="float:right;max-width:100%"></a>
   </div>
 </div>
