--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -54,7 +54,7 @@ permalink: /cornils.html
     <em>1872-1964</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a><a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carsten Packing Company Coolers and Shipping Office</a> </p>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carsten Packing Company Coolers and Shipping Office</a> </p>
     <br>
     <p>According to passages in Electrical West and American Machinist magazines, published in 1922, P.V. Cornils acted as the Carsten Packing Company in-house architect, designing various additions around the original structure. </p>
     <br>
