--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -42,6 +42,11 @@ permalink: /dugan.html
   .column {
     width: 100%;
   }
+  img {
+  width: 200px;
+  height: 300px;
+  object-fit: contain;
+}
 }
 </style>
 </head>
