--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -3,3 +3,79 @@ title: George L. Ekvall
 layout: about
 permalink: /ekvall.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+  img {
+  width: 600px;
+  height: 600px;
+  object-fit: contain;
+}
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>George L. Ekvall</b></p></h4>
+    <br>
+    <em>1895-1974</em>
+    <br>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24 BROADWAY, TACOMA">City Hall</a> <a href="https://aweymo.github.io/losttacoma/browse.html#502 N YAKIMA AVE, TACOMA">Apartment for John Buffelen</a> </p>
+    <br>
+    <p>Architect George L. Ekvall was born in Tacoma, Washington in 1896 and certified as an architect in 1925. Ekvall was a member of the American Institute of Architects, the Olympia Lions Club and the Olympia Art League. Notable architectural work Ekvall was associated with was the Holy Rosary Catholic Church in Tacoma, the Federation Forest monument to the Washington State Federation of Women's Clubs and the Medical-Dental Tower, a proposed but never constructed Tacoma skyscraper.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/16339/rec/5">Evelyn Apartments</a>, 
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14379/rec/3">Roosevelt Apartments</a>, 
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6551/rec/2">The Luaun Apartments</a> </p>
+    <br>
+    <sub>Sources: “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - December 9, 1928 - Page 36,”, “Tribune (Published as Tacoma News Tribune) - March 12, 1974 - Page 15,”, “Tribune (Published as THE NEWS TRIBUNE) - May 20, 1959 - Page 38,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - February 5, 1949 - Page 10,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - July 10, 1925 - Page 6,”</sub>
+    <br>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="float:right;max-width:100%;"></a>
+  </div>
+</div>
+  
+</body>
+</html>
