--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -9,6 +9,11 @@ permalink: /couchot.html
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+  img {
+  width: 600px;
+  height: 600px;
+  object-fit: contain;
+}
 * {
   box-sizing: border-box;
 }
