--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -9,6 +9,11 @@ permalink: /bachelor.html
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+     img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
 * {
   box-sizing: border-box;
 }
