--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -12,7 +12,7 @@ permalink: /cornils.html
   img {
   width: 600px;
   height: 600px;
-  object-fit: contain;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
