--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -12,7 +12,7 @@ permalink: /couchot.html
   img {
   width: 600px;
   height: 600px;
-  object-fit: contain;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
