--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -13,7 +13,7 @@ permalink: /ekvall.html
   img {
   width: 600px;
   height: 600px;
-  object-fit: contain;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
