--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -3,3 +3,86 @@ title: Jack D. Griffin
 layout: about
 permalink: /griffin.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Jack D. Griffin</b></p></h4>
+    <br>
+    <em>1892-1951</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
+    <br>
+    <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. After moving to Seattle, Griffin formed a partnership with Irwin H. Hill, Arnott Woodroofe and later with Ernest T. Mock. When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4192/rec/28">Fife Civic Auditorium</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/14155/rec/26">Temple Beth Israel</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36432/rec/2">The Salvation Army</a> </p>
+    <br>
+    <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Jack D. Griffin.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - August 31, 1927 - Page 7,” </sub>
+    <br>
+    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 1928-01-12, Courtesy Northwest Room</sub>
+    <br>
+    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926, Courtesy Northwest Room</sub>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=griffin"><img src="https://aweymo.github.io/losttacoma/objects/p_griffin.jpeg" alt="Jack D. Griffin" style="max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
+  </div>
+</div>
+  
+</body>
+</html>
