--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -64,7 +64,7 @@ permalink: /bachelor.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#4801-05 YAKIMA AVE S, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bachelor.jpeg" alt="Arthur J. Bachelor" style="float:right;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#4801-05 YAKIMA AVE S, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bachelor.jpeg" alt="Arthur J. Bachelor" style="max-width:90%;"></a>
   <br>
   <br>
   </div>
