--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -62,7 +62,11 @@ permalink: /bassindale.html
     <br>
     <p>Lambert Bassindale was born in Racine, Wisconsin in 1875 and graduated from the Chicago Art Institute. After moving to St. Paul in 1918 to partner with associate architect Charles Frost, Bassindale began a long career of designing structures for the Northern Pacific Railroad, including office buildings, Hospitals and Nursing Homes. The  Northern Pacific Beneficial Association Hospital was organized in 1882 and had seven hospitals spanning Minnesota to Tacoma, the westernmost facility.</p>
     <br>
-    <p>Other Work: <a href="https://prabook.com/web/show-photo.jpg?id=1499465&cache=false">Lowry Hotel, St. Paul, ca. 1920</a>, <a href="https://www.startribune.com/why-did-minneapolis-tear-down-its-train-station-great-northern-depot/600013884/">Great Northern Depot, Minneapolis MN, 1914 (under Charles Frost)</a> </p>
+    <p>Other Work: 
+    <br>
+    <a href="https://prabook.com/web/show-photo.jpg?id=1499465&cache=false">Lowry Hotel, St. Paul, ca. 1920</a>, 
+    <br>
+    <a href="https://www.startribune.com/why-did-minneapolis-tear-down-its-train-station-great-northern-depot/600013884/">Great Northern Depot, Minneapolis MN, 1914 (under Charles Frost)</a> </p>
     <br>
     <sub>Sources: Bassindale, Lambert. “Lambert Bassindale Papers, 1925.", "1925., Northern Pacific Beneficial Association Hospital Records. , 1905. Print.”</sub>
     <br>
