--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -63,7 +63,13 @@ permalink: /couchot.html
     <br>
     <p>Maurice C. Couchot was an architect and engineer from San Francisco that was inspired to become a pioneer of reinforced concrete building methods after experiencing the devastation of the 1906 earthquake. Couchot was the company engineer for Sperry Flour and contributed industrial plans for structures in California and Washington.</p>
     <br>
-    <p>Other Work: <a href="https://calisphere.org/item/48d352f713eef7397040a2d51280c2cc/">Broadway Arcade Building, Downtown, Los Angeles, CA (1922-1924)</a>, <a href="https://sksre.com/project/888-brannan/">888 Brannan Street Factory, San Francisco, CA</a>, <a href="https://ohp.parks.ca.gov/pages/1067/files/CA_Alameda_Oakland Auditorium_DRAFT.pdf">Oakland Auditorium, Oakland, CA, 1913-1915</a> </p>
+    <p>Other Work: 
+    <br>
+    <a href="https://calisphere.org/item/48d352f713eef7397040a2d51280c2cc/">Broadway Arcade Building, Downtown, Los Angeles, CA (1922-1924)</a>,
+    <br>
+    <a href="https://sksre.com/project/888-brannan/">888 Brannan Street Factory, San Francisco, CA</a>, 
+    <br>
+    <a href="https://ohp.parks.ca.gov/pages/1067/files/CA_Alameda_Oakland Auditorium_DRAFT.pdf">Oakland Auditorium, Oakland, CA, 1913-1915</a> </p>
     <br>
     <sub>Sources: “Letters - Times-Herald (Vallejo, CA) - May 25, 2017 - Page 9,”, “Maurice Couchot | Hensolt SEAONC Legacy Project.”, “PCAD - Maurice C. Couchot.”</sub>
     <br>
