--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -64,7 +64,13 @@ permalink: /dugan.html
     <br>
     <p>Earl N. Dugan was born in Perry, Iowa and graduated from the University of Illinois in 1906. After working for a short while in Chicago and San Francisco, he arrived in Tacoma working independently as a draftsman. This led to partnerships with Sutton, Whitney and Dugan as well as Mock, Morrison and Dugan. Dugan was the founding member of the Tacoma Society of Architects and would sometimes use this platform to secure contracts through free consultation, as was the case for the Point Defiance Pavilion.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/5295/rec/1">Fidelity Trust Company, Office Building, Downtown, Tacoma, WA (1890) demolished</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/1567/rec/3"> Wright, Annie, Seminary #2, Tacoma, WA (1923-1924)</a> </p>
+    <p>Other Work: 
+    <br> 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/5295/rec/1">Fidelity Trust Company, Office Building, Downtown, Tacoma, WA (1890) demolished</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/1567/rec/3"> Wright, Annie, Seminary #2, Tacoma, WA (1923-1924)</a> </p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
