--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -66,8 +66,12 @@ permalink: /ekvall.html
     <br>
     <p>Architect George L. Ekvall was born in Tacoma, Washington in 1896 and certified as an architect in 1925. Ekvall was a member of the American Institute of Architects, the Olympia Lions Club and the Olympia Art League. Notable architectural work Ekvall was associated with was the Holy Rosary Catholic Church in Tacoma, the Federation Forest monument to the Washington State Federation of Women's Clubs and the Medical-Dental Tower, a proposed but never constructed Tacoma skyscraper.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/16339/rec/5">Evelyn Apartments</a>, 
+    <p>Other Work: 
+      <br>
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/16339/rec/5">Evelyn Apartments</a>, 
+      <br>
       <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14379/rec/3">Roosevelt Apartments</a>, 
+      <br>
       <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6551/rec/2">The Luaun Apartments</a> </p>
     <br>
     <sub>Sources: “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - December 9, 1928 - Page 36,”, “Tribune (Published as Tacoma News Tribune) - March 12, 1974 - Page 15,”, “Tribune (Published as THE NEWS TRIBUNE) - May 20, 1959 - Page 38,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - February 5, 1949 - Page 10,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - July 10, 1925 - Page 6,”</sub>
