--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -62,7 +62,13 @@ permalink: /griffin.html
     <br>
     <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. After moving to Seattle, Griffin formed a partnership with Irwin H. Hill, Arnott Woodroofe and later with Ernest T. Mock. When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4192/rec/28">Fife Civic Auditorium</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/14155/rec/26">Temple Beth Israel</a>, <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36432/rec/2">The Salvation Army</a> </p>
+    <p>Other Work: 
+    <br>  
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4192/rec/28">Fife Civic Auditorium</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/14155/rec/26">Temple Beth Israel</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36432/rec/2">The Salvation Army</a> </p>
     <br>
     <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Jack D. Griffin.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - August 31, 1927 - Page 7,” </sub>
     <br>
