--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -64,7 +64,7 @@ permalink: /flickinger.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32495/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/p_flickinger.jpg" alt="Harry E. Flickinger" style="float:right;min-width:100%;"></a>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32495/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/p_flickinger.jpg" alt="Harry E. Flickinger" style="max-width:100%;"></a>
   </div>
 </div>
   
