--- a/pages/heath.html
+++ b/pages/heath.html
@@ -3,3 +3,92 @@ title: Frederick Henry Heath
 layout: about
 permalink: /heath.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Frederick Henry Heath</b></p></h4>
+    <br>
+    <em>1861-1953</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053">Hawthorne School</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">Edison School Annex</a></p>
+    <br>
+    <p>Frederick Henry Heath was born in LaCrosse, Wisconsin in 1861 and graduated from Powell's Academy, a parochial institution created by Rev William R. Powell in Caledonia, Minnesota. Heath moved to Tacoma in 1893 and formed a partnership with Ambrose James Russell and A. Walter Spaulding in 1901. It was during this partnership that Heath would become the School Architect for the Tacoma School District from 1903 through 1920, when he had moved on to partner with George Gove and draftsman Herbert A. Bell as Heath, Gove & Bell. Towards the end of his life, Heath collaborated with his son Frederick Jr. to help promote and sell his invention, "Heath Cubes," a square, hollow tile building material.</p>
+    <br>
+    <p>Other Work: 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9603/rec/3">First Church of Christ, Scientist</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/5834/rec/5">Stadium High School</a> </p>
+    <br>
+    <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Frederick H. Heath.”, “PCAD - Frederick Henry Heath.”, “Peering at the Past: County High Schools Were Private, Parochial before Public.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - April 15, 1931 - Page 6,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 4, 1953 - Page 1,”</sub>
+    <br>
+    <sub>TPL Historic Building Files (BU-10009), Courtesy Northwest Room</sub>
+    <br>
+    <sub>TPL Historic Building Files (BU-12230), Courtesy Northwest Room</sub>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Frederick%20Henry%20Heath"><img src="https://aweymo.github.io/losttacoma/objects/p_heath.jpeg" alt="Frederick Henry Heath" style="max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne School" alt="Hawthorne School" style="max-width:100%;"></a>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/ ext_edison" alt="Edison School Annex" style="max-width:100%;"></a>
+  </div>
+</div>
+  
+</body>
+</html>
