--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -79,7 +79,7 @@ permalink: /ekvall.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="float:right;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="max-width:100%;"></a>
     <br>
     <br>
   </div>
