--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -81,13 +81,17 @@ permalink: /griffin.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
     <br>
-    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 1928-01-12, Courtesy Northwest Room</sub>
+    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 1928-01-12, 
+    <br> 
+    Courtesy Northwest Room</sub>
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
     <br>
-    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926, Courtesy Northwest Room</sub>
+    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926, 
+    <br>  
+    Courtesy Northwest Room</sub>
     <br>
   </div>
 </div>
