--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -70,9 +70,6 @@ permalink: /albertson.html
     <br>
     <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Abraham H. Albertson.”, “PCAD - Abraham Horace Albertson.”</sub>
     <br>
-    <sub>TPL Historic Building Files (BU-10009), Courtesy Northwest Room</sub>
-    <br>
-    <sub>TPL Historic Building Files (BU-12230), Courtesy Northwest Room</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="max-width:75%;"></a>
@@ -82,9 +79,18 @@ permalink: /albertson.html
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="float:left;max-width:75%;"></a>
+    <br>
+    <sub>TPL Historic Building Files (BU-10009), 
+    <br> 
+    Courtesy Northwest Room</sub>
+    <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;max-width:115%;"></a>
+    <br>
+    <sub>TPL Historic Building Files (BU-12230), 
+    <br>  
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
